// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfluenceAdvancedSearch /> snapshot default 1`] = `
<ConfluenceAdvancedSearchBase
  enabledFilters={Array []}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isLoading={false}
  query=""
  searchSessionId="testSessionId"
>
  <SingleSiteAdvancedSearch
    enabledFilters={Array []}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {},
        "now": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isLoading={false}
    query=""
    searchSessionId="testSessionId"
  >
    <span
      onClick={[Function]}
      role="none"
      style={
        Object {
          "display": "flex",
          "height": "100%",
        }
      }
    >
      <AdvancedSearchLink
        href="/wiki/search"
        isKeyboardHighlighted={false}
      >
        div
      </AdvancedSearchLink>
    </span>
  </SingleSiteAdvancedSearch>
</ConfluenceAdvancedSearchBase>
`;

exports[`<ConfluenceAdvancedSearch /> snapshot in multi product scenario 1`] = `
<ConfluenceAdvancedSearchBase
  enabledFilters={Array []}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isLoading={false}
  query=""
  searchSessionId="testSessionId"
>
  <SingleSiteAdvancedSearch
    enabledFilters={Array []}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {},
        "now": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isLoading={false}
    query=""
    searchSessionId="testSessionId"
  >
    <span
      onClick={[Function]}
      role="none"
      style={
        Object {
          "display": "flex",
          "height": "100%",
        }
      }
    >
      <AdvancedSearchLink
        href="/wiki/search"
        isKeyboardHighlighted={false}
      >
        div
      </AdvancedSearchLink>
    </span>
  </SingleSiteAdvancedSearch>
</ConfluenceAdvancedSearchBase>
`;

exports[`<ConfluenceAdvancedSearch /> snapshot keyboard highlighted 1`] = `
<ConfluenceAdvancedSearchBase
  enabledFilters={Array []}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isLoading={false}
  query=""
  searchSessionId="testSessionId"
>
  <SingleSiteAdvancedSearch
    enabledFilters={Array []}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {},
        "now": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isLoading={false}
    query=""
    searchSessionId="testSessionId"
  >
    <span
      onClick={[Function]}
      role="none"
      style={
        Object {
          "display": "flex",
          "height": "100%",
        }
      }
    >
      <AdvancedSearchLink
        href="/wiki/search"
        isKeyboardHighlighted={true}
      >
        div
      </AdvancedSearchLink>
    </span>
  </SingleSiteAdvancedSearch>
</ConfluenceAdvancedSearchBase>
`;
